Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -18,6 +18,7 @@ steps:
     scaVerbose: true
     scaDebug: true
     fortifyScanType: 'ScanCentralScan'
+    scanCentralFortifyServerName: 'SSC'
     scanCentralRunFortifyUpload: true
     scanCentralFortifyApplicationIdentifierType: 'byId'
     scanCentralFortifyApplicationVersionId: '10018'
